--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -16,9 +16,9 @@ http-equiv="X-UA-Compatible">
 <UL><!-- Korvaa ohessa olevat sanat GITHUBTUNNUS ja 
            REPOSITORIO omilla tiedoillasi: --> 
         
-  <LI><A href="https://github.com/GITHUBTUNNUS/REPOSITORIO">Työn 
+  <LI><A href="https://github.com/HannuPekkaHonkanen/Tietokantasovellus_k2014_HPH">Työn 
   repositorio</A></LI>
-  <LI><A href="https://github.com/GITHUBTUNNUS/REPOSITORIO/blob/master/doc/dokumentaatio.pdf?raw=true">Työn 
+  <LI><A href="https://github.com/HannuPekkaHonkanen/Tietokantasovellus_k2014_HPH/blob/master/esittelysivu.html?raw=true">Työn 
   dokumentaatio</A></LI><!-- Viikolla 2 voit laittaa kommentoidut linkitkin sivuille. 
            Ota kommenttimerkit pois sen kielen ympäriltä, jota käytät --> 
         <!-- Linkit Java-kielelle.
@@ -46,7 +46,7 @@ http-equiv="X-UA-Compatible">
       <li><a href="http://cstunnus.users.cs.helsinki.fi/Tietokantasovellus/index.php">Sovelluksen kirjautumissivu</a></li>
       --> 
       </UL>
-<H2>Työn aihe</H2>    Laita tähän aihekuvaus tai      <A href="http://advancedkittenry.github.io/suunnittelu_ja_tyoymparisto/aiheet/Pokemon-kanta.html"> 
+<H2>Työn aihe</H2>    Laita tähän aihekuvaus tai      <A href="http://advancedkittenry.github.io/suunnittelu_ja_tyoymparisto/aiheet/Elektroninen_keittokirja.html"> 
      linkki valmiiseen aiheeseen</A>.     <!--
     <h2>Kirjautumistunnuksia testausta varten</h2>
 
