--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -18,7 +18,7 @@ http-equiv="X-UA-Compatible">
         
   <LI><A href="https://github.com/HannuPekkaHonkanen/Tietokantasovellus_k2014_HPH">Työn 
   repositorio</A></LI>
-  <LI><A href="https://github.com/HannuPekkaHonkanen/Tietokantasovellus_k2014_HPH/blob/master/esittelysivu.html?raw=true">Työn 
+  <LI><A href="https://github.com/HannuPekkaHonkanen/Tietokantasovellus_k2014_HPH/blob/master/doc/dokumentaatio.pdf?raw=true">Työn 
   dokumentaatio</A></LI><!-- Viikolla 2 voit laittaa kommentoidut linkitkin sivuille. 
            Ota kommenttimerkit pois sen kielen ympäriltä, jota käytät --> 
         <!-- Linkit Java-kielelle.
