--- a/html-demo/KEITTOKIRJA.html
+++ b/html-demo/KEITTOKIRJA.html
@@ -3,14 +3,18 @@
 <html>
     <head>
         <title></title>
- <!--
-       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
--->
+        <!--
+              <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        -->
+        <link href="../css/bootstrap.css" rel="stylesheet">
+        <link href="../css/bootstrap-theme.css" rel="stylesheet">
+        <link href="../css/main.css" rel="stylesheet">      
+        
     </head>
 
     <body>
 
-        <h1>KEITTOKIRJA</h1>
+        <h1>KEITTOKIasdRJA</h1>
 
         <p>Hannu ultrahypersuosittujahienoElektroninenKeittokirja.</p>
 
