--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -46,7 +46,7 @@ http-equiv="X-UA-Compatible">
       <li><a href="http://cstunnus.users.cs.helsinki.fi/Tietokantasovellus/index.php">Sovelluksen kirjautumissivu</a></li>
       --> 
       </UL>
-<H2>Työn aihe</H2>    Laita tähän aihekuvaus tai      <A href="http://advancedkittenry.github.io/suunnittelu_ja_tyoymparisto/aiheet/Elektroninen_keittokirja.html"> 
+<H2>Työn aihe</H2>    Aihekuvaus      <A href="http://advancedkittenry.github.io/suunnittelu_ja_tyoymparisto/aiheet/Elektroninen_keittokirja.html"> 
      linkki valmiiseen aiheeseen</A>.     <!--
     <h2>Kirjautumistunnuksia testausta varten</h2>
 
