viikko 2 stashin jalkeen 3

--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -36,12 +36,12 @@ http-equiv="X-UA-Compatible">
            Tietokantasovellus sen hakemiston nimellä, missä 
            sovelluksesi usersin htdocs-kansiossa sijaitsee:
       --> 
-        <!--
-      <li><a href="http://cstunnus.users.cs.helsinki.fi/connectiontest.php">Connectiontest-ohjelma</a></li>
-      <li><a href="http://cstunnus.users.cs.helsinki.fi/Tietokantasovellus/html-demo/index.html">HTML-demosivujen etusivu</a></li>
-      <li><a href="http://cstunnus.users.cs.helsinki.fi/Tietokantasovellus/listaustesti.php">Ensimmäinen oma tietokantalistaus</a></li>
-      --> 
-              <!-- Viikolla 3 laita alla kommentoitu linkki osoittamaan omaan kirjautumissivuusi. --> 
+
+      <li><a href="http://hphonkan.users.cs.helsinki.fi/Tietokantasovellus_k2014_HPH/connectiontest.php">Connectiontest-ohjelma</a></li>
+      <li><a href="http://hphonkan.users.cs.helsinki.fi/Tietokantasovellus_k2014_HPH/html-demo/KEITTOKIRJA.html#">HTML-demosivujen etusivu</a></li>
+      <li><a href="http://hphonkan.users.cs.helsinki.fi/Tietokantasovellus/listaustesti.php">Ensimmäinen oma tietokantalistaus</a></li>
+
+      <!-- Viikolla 3 laita alla kommentoitu linkki osoittamaan omaan kirjautumissivuusi. --> 
         <!--
       <li><a href="http://cstunnus.users.cs.helsinki.fi/Tietokantasovellus/index.php">Sovelluksen kirjautumissivu</a></li>
       --> 
