--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -44,7 +44,7 @@
 
             <!-- Viikolla 3 laita alla kommentoitu linkki osoittamaan omaan kirjautumissivuusi. --> 
 
-            <li><a href="http://hphonkan.users.cs.helsinki.fi/Tietokantasovellus_k2014_HPH/frontPage.php#">Sovelluksen etusivu, josta pääsee kirjautumissivulle (Käytä linkkiä "Kirjaudu sisään")</a></li>
+            <li><a href="http://hphonkan.users.cs.helsinki.fi/Tietokantasovellus_k2014_HPH/frontPage.php#">Sovelluksen etusivu</a></li>
 
         </UL>
         <H2>Työn aihe</H2>    Aihekuvaus      <A href="http://advancedkittenry.github.io/suunnittelu_ja_tyoymparisto/aiheet/Elektroninen_keittokirja.html"> 
@@ -53,6 +53,17 @@
         <h2>Kirjautumistunnuksia testausta varten</h2>
 
         <p>Esim:<br />
-            Tunnus ja salasana:<br /> Hannu, hannu123
+            Tunnus ja salasana:<br /> Hannu11, hannu123
         </p>
+
+        <h2>Viikko 4, tilanne 6.4.2014</h2>
+
+        <p>CRUD toteutettu taululle Kayttaja<br />
+        </p>
+
+        <h2>HUOM! 6.4.2014</h2>
+
+        <p>Yläpalkissa näkyvät vielä kaikki linkit koko ajan, mutta tämä tullaan muuttamaan työn edetessä.<br />
+        </p>
+
     </BODY></HTML>
